<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".RegisterActivity">
    <include layout="@layout/custom_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".presenter.view.LoginActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:fontFamily="@font/proxima_nova"
                            android:text="@string/firstName"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14ssp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtUserFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:background="@drawable/edit_text_background"
                            android:hint="@string/firstName"
                            android:inputType="text"
                            android:padding="@dimen/_8sdp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/hints_color"
                            android:textCursorDrawable="@drawable/color_cursor_white"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:fontFamily="@font/proxima_nova"
                            android:text="@string/lastName"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14ssp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtUserLastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:background="@drawable/edit_text_background"
                            android:hint="@string/lastName"
                            android:inputType="text"
                            android:padding="@dimen/_8sdp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/hints_color"
                            android:textCursorDrawable="@drawable/color_cursor_white"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/proxima_nova"
                        android:text="Phone"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:gravity="center_vertical">

                        <com.hbb20.CountryCodePicker
                            android:id="@+id/countryCode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/_2sdp"
                            android:background="@drawable/edit_text_background"
                            android:padding="@dimen/_2sdp"
                            app:ccpDialog_searchEditTextTint="@color/black"
                            app:ccpDialog_textColor="@color/countryCodeNumberColor"
                            app:ccp_autoDetectCountry="true"
                            app:ccp_contentColor="@color/teal_200"
                            app:ccp_textSize="@dimen/_12ssp" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtUserPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:layout_toEndOf="@id/countryCode"
                            android:background="@drawable/edit_text_background"
                            android:hint="@string/phoneNumber"
                            android:inputType="phone"
                            android:padding="@dimen/_8sdp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/hints_color"
                            android:textCursorDrawable="@drawable/color_cursor_white"
                            android:textSize="@dimen/_12ssp" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/proxima_nova"
                        android:text="@string/email"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtUserEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/email_hint"
                        android:inputType="text"
                        android:padding="@dimen/_8sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/hints_color"
                        android:textCursorDrawable="@drawable/color_cursor_white"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/proxima_nova"
                        android:text="@string/password"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:boxBackgroundMode="none"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/hints_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edit_text_background"
                            android:hint="@string/passwordHints"
                            android:inputType="textPassword"
                            android:longClickable="false"
                            android:padding="@dimen/_8sdp"
                            android:textAlignment="viewStart"
                            android:textColor="@color/white"
                            android:textColorHint="@color/hints_color"
                            android:textCursorDrawable="@drawable/color_cursor_white"
                            android:textSize="@dimen/_12ssp">

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/proxima_nova"
                        android:text="@string/confirmPassword"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:boxBackgroundMode="none"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/hints_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edit_text_background"
                            android:hint="@string/passwordHints"
                            android:inputType="textPassword"
                            android:longClickable="false"
                            android:padding="@dimen/_8sdp"
                            android:textAlignment="viewStart"
                            android:textColor="@color/white"
                            android:textColorHint="@color/hints_color"
                            android:textCursorDrawable="@drawable/color_cursor_white"
                            android:textSize="@dimen/_12ssp">

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/login_button_background"
                    android:fontFamily="@font/proxima_nova"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/proxima_nova"
                    android:gravity="center"
                    android:text="@string/login_info"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

</RelativeLayout>