<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".LoginActivity">

    <include layout="@layout/custom_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".presenter.view.LoginActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_15sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/proxima_nova"
                        android:text="@string/email"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:boxBackgroundMode="none"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtUserEmail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edit_text_background"
                            android:hint="abc@gmail.com"
                            android:inputType="textEmailAddress"
                            android:longClickable="false"
                            android:padding="@dimen/_8sdp"
                            android:textAlignment="viewStart"
                            android:textColor="@color/white"
                            android:textColorHint="@color/hints_color"
                            android:textCursorDrawable="@drawable/color_cursor_white"
                            android:textSize="@dimen/_12ssp">

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/proxima_nova"
                        android:text="@string/password"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:boxBackgroundMode="none"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/hints_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edit_text_background"
                            android:hint="******"
                            android:inputType="textPassword"
                            android:longClickable="false"
                            android:padding="@dimen/_8sdp"
                            android:textAlignment="viewStart"
                            android:textColor="@color/white"
                            android:textColorHint="@color/hints_color"
                            android:textCursorDrawable="@drawable/color_cursor_white"
                            android:textSize="@dimen/_12ssp">

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtForgetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/proxima_nova"
                    android:gravity="end"
                    android:text="@string/forget_password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLoginIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/login_button_background"
                    android:fontFamily="@font/proxima_nova"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/proxima_nova"
                    android:gravity="center"
                    android:text="@string/register_info"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

</RelativeLayout>